feat: support run server